--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>CSS Animations</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <a href="#">Hover Me</a>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
