--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <div id="app">
-      <a href="#">Hover Me</a>
+      <a href="#">
+        <span></span>
+        Hover Me
+      </a>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
