--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
   </head>
   <body>
     <div id="app">
-      <a href="#">
-        <span></span>
-        Hover Me
-      </a>
+      <a href="#">Hover Me</a>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
