--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app">
-      <a href="#">Hover Me</a>
+      <button>Submit</button>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
