--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app">
-      <button>Submit</button>
+      <a href="#"><span>B</span>utton</a>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
