--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <div id="app">
-      <a href="#"><span>B</span>utton</a>
+      <a href="#">
+        Button
+        <div class="wave"></div>
+      </a>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
