--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="app">
       <a href="#">
         Button
-        <div class="wave"></div>
+        <span></span>
       </a>
     </div>
     <script type="module" src="/src/main.ts"></script>
