--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
   </head>
   <body>
     <div id="app">
-      <a href="#">Hover Me</a>
+      <div class="container">
+        <a href="#">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          Button
+        </a>
+        <a href="#">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          Button
+        </a>
+      </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
