--- a/index.html
+++ b/index.html
@@ -9,20 +9,15 @@
   <body>
     <div id="app">
       <div class="container">
-        <a href="#">
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-          Button
-        </a>
-        <a href="#">
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-          Button
-        </a>
+        <div class="btn">
+          <a href="#">Read More</a>
+        </div>
+        <div class="btn">
+          <a href="#">Read More</a>
+        </div>
+        <div class="btn">
+          <a href="#">Read More</a>
+        </div>
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
