--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>CSS Animations</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="container">
+      <img src="lady.jpg" alt="young lady" />
+      <div class="caption">
+        <h1>Love comes one day</h1>
+        <p>When the time is right, or maybe not!</p>
+      </div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
