--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>CSS Animations</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <ul>
+        <li><a href="#" data-text="home">home</a></li>
+        <li><a href="#" data-text="about">about</a></li>
+        <li><a href="#" data-text="services">services</a></li>
+        <li><a href="#" data-text="team">team</a></li>
+        <li><a href="#" data-text="contact">contact</a></li>
+      </ul>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
