--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <body>
     <div id="app">
       <ul>
-        <li><a href="#" data-text="home">home</a></li>
-        <li><a href="#" data-text="about">about</a></li>
-        <li><a href="#" data-text="services">services</a></li>
-        <li><a href="#" data-text="team">team</a></li>
-        <li><a href="#" data-text="contact">contact</a></li>
+        <li><a href="#" data-text="&nbsp;home">&nbsp;home&nbsp;</a></li>
+        <li><a href="#" data-text="&nbsp;about">&nbsp;about&nbsp;</a></li>
+        <li><a href="#" data-text="&nbsp;services">&nbsp;services&nbsp;</a></li>
+        <li><a href="#" data-text="&nbsp;team">&nbsp;team&nbsp;</a></li>
+        <li><a href="#" data-text="&nbsp;contact">&nbsp;contact&nbsp;</a></li>
       </ul>
     </div>
     <script type="module" src="/src/main.ts"></script>
