--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <title>CSS Animations</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="card">
+      <div class="imgbox">
+        <img src="lady.jpg" alt="young lady" />
+      </div>
+      <div class="content">
+        <h2>My Agony</h2>
+        <p>
+          I've never left you, YOU left me, when I loved you the most, and did
+          everything I could for you. This winter was warm with you, ZhoZho.
+        </p>
+      </div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
