--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
   </head>
   <body>
     <div class="card">
-      <div class="imgbox">
-        <img src="lady.jpg" alt="young lady" />
+      <div class="face face1">
+        <div class="content">
+          <h2>My Agony</h2>
+          <p>
+            I've never left you, YOU left me, when I loved you the most, and did
+            everything I could for you. This winter was warm with you, ZhoZho.
+          </p>
+          <a href="#">Reconnect</a>
+        </div>
       </div>
-      <div class="content">
-        <h2>My Agony</h2>
-        <p>
-          I've never left you, YOU left me, when I loved you the most, and did
-          everything I could for you. This winter was warm with you, ZhoZho.
-        </p>
+      <div class="face face2">
+        <h2>16</h2>
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
