--- a/index.html
+++ b/index.html
@@ -7,19 +7,26 @@
     <title>CSS Animations</title>
   </head>
   <body>
-    <div class="card">
-      <div class="face face1">
-        <div class="content">
-          <h2>My Agony</h2>
-          <p>
-            I've never left you, YOU left me, when I loved you the most, and did
-            everything I could for you. This winter was warm with you, ZhoZho.
-          </p>
-          <a href="#">Reconnect</a>
+    <div class="container">
+      <div class="card" data-brand="&nbsp;Zho">
+        <div class="imgbox">
+          <img src="ring.png" alt="ring" />
         </div>
-      </div>
-      <div class="face face2">
-        <h2>16</h2>
+        <div class="contentbox">
+          <h2>ZhoZho rings</h2>
+          <div class="size">
+            <h3>size:</h3>
+            <span>4</span>
+            <span>5</span>
+            <span>6</span>
+            <span>7</span>
+          </div>
+          <div class="color">
+            <h3>box color</h3>
+            <span></span><span></span><span></span>
+          </div>
+          <a href="#">Buy Now </a>
+        </div>
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
