--- a/index.html
+++ b/index.html
@@ -7,14 +7,7 @@
     <title>CSS Animations</title>
   </head>
   <body>
-    <ul>
-      <li>Z</li>
-      <li>H</li>
-      <li>O</li>
-      <li>Z</li>
-      <li>H</li>
-      <li>O</li>
-    </ul>
+    <h1 data-text="ZhoZho">ZhoZho</h1>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
