--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>CSS Animations</title>
   </head>
   <body>
-    <h1 data-text="ZhoZho">ZhoZho</h1>
+    <section>
+      <h2>ZhoZho</h2>
+      <img src="wondering.jpg" alt="ZhoZho" />
+    </section>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
