--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
   </head>
   <body>
     <section>
-      <h2>ZhoZho</h2>
-      <img src="wondering.jpg" alt="ZhoZho" />
+      <h2>
+        <span><em>Z</em></span>
+        <span><em>H</em></span>
+        <span><em>O</em></span>
+        <span><em>Z</em></span>
+        <span><em>H</em></span>
+        <span><em>O</em></span>
+      </h2>
     </section>
     <script type="module" src="/src/main.ts"></script>
   </body>
