--- a/index.html
+++ b/index.html
@@ -7,16 +7,41 @@
     <title>CSS Animations</title>
   </head>
   <body>
-    <section>
-      <h2>
-        <span><em>Z</em></span>
-        <span><em>H</em></span>
-        <span><em>O</em></span>
-        <span><em>Z</em></span>
-        <span><em>H</em></span>
-        <span><em>O</em></span>
-      </h2>
-    </section>
+    <div class="container">
+      <div class="card" style="--i: -1">
+        <div class="content" style="--j: 1">
+          <h2>Card 1</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quo
+            illo tenetur totam sed natus provident ex molestiae reiciendis
+            voluptatibus fuga, quod, ad corrupti libero at molestias vitae, est
+            beatae.
+          </p>
+        </div>
+      </div>
+      <div class="card" style="--i: 0">
+        <div class="content" style="--j: 2">
+          <h2>Card 2</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quo
+            illo tenetur totam sed natus provident ex molestiae reiciendis
+            voluptatibus fuga, quod, ad corrupti libero at molestias vitae, est
+            beatae.
+          </p>
+        </div>
+      </div>
+      <div class="card" style="--i: 1">
+        <div class="content" style="--j: 3">
+          <h2>Card 3</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quo
+            illo tenetur totam sed natus provident ex molestiae reiciendis
+            voluptatibus fuga, quod, ad corrupti libero at molestias vitae, est
+            beatae.
+          </p>
+        </div>
+      </div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
