--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>CSS Animations</title>
   </head>
   <body>
-    <h1>Coming<br />Soon!<br /></h1>
+    <div class="loading"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
