--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>CSS Animations</title>
   </head>
   <body>
-    <div class="loading"></div>
+    <div class="background">
+      <img src="car.png" alt="car" class="car" />
+      <img src="motorbike.png" alt="motorbike" class="motorbike" />
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
