--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <title>CSS Animations</title>
   </head>
   <body>
-    <div class="background">
-      <img src="car.png" alt="car" class="car" />
-      <img src="motorbike.png" alt="motorbike" class="motorbike" />
-    </div>
+    <h1>I love ZhoZho's <span></span></h1>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
