--- a/index.html
+++ b/index.html
@@ -7,14 +7,9 @@
     <title>CSS Animations</title>
   </head>
   <body>
-    <ul>
-      <li>Z</li>
-      <li>h</li>
-      <li>o</li>
-      <li>Z</li>
-      <li>h</li>
-      <li>o</li>
-    </ul>
+    <div class="cradle">
+      <span></span><span></span><span></span><span></span><span></span>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
