--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>CSS Animations</title>
   </head>
   <body>
-    <div class="cradle">
-      <span></span><span></span><span></span><span></span><span></span>
-    </div>
+    <div class="loading"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
