--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <title>CSS Animations</title>
   </head>
   <body>
-    <div class="loading"></div>
+    <section>
+      <div class="glass">
+        <div class="inner">
+          <div class="liquid"></div>
+        </div>
+      </div>
+      <div class="glass">
+        <div class="inner">
+          <div class="liquid"></div>
+        </div>
+      </div>
+    </section>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
