--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>CSS Animations</title>
   </head>
   <body>
-    <div class="box">
-      <div class="lightbar"></div>
-      <div class="toplayer"></div>
-      <h2>ZhoZho is my Agony</h2>
+    <div class="loader">
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
