--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>CSS Animations</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="loader">
+      <span class="top-half">ZhoZho</span>
+      <span class="btm-half">ZhoZho</span>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
