colorful blinking text

--- a/index.html
+++ b/index.html
@@ -7,20 +7,7 @@
     <title>CSS Animations</title>
   </head>
   <body>
-    <div class="card">
-      <div class="content">
-        <div class="contentbox">
-          <h2>Margot Robbie<br /><span>ZhoZho Wannabe</span></h2>
-          <div class="imgbox">
-            <img src="margot.webp" alt="Margot Robbie" />
-          </div>
-          <button type="button">Let's chat!</button>
-        </div>
-      </div>
-      <div class="toggle">
-        <span></span>
-      </div>
-    </div>
+    <h2 class="text">ZhoZho is cruel</h2>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
