--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>CSS Animations</title>
   </head>
   <body>
-    <h2 class="text">ZhoZho is cruel</h2>
+    <section>
+      <h2 class="text">ZhoZho</h2>
+      <div class="circle1"><h2 class="text">ZhoZho</h2></div>
+      <div class="circle2"><h2 class="text">ZhoZho</h2></div>
+    </section>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
